@@ -3,17 +3,8 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Comp.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/view/Observer.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/FunctionCall.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Locale.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/cfg/parameters.json</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/ctrl/Parameters.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Loose.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/ctrl/Batch.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/Main.java</file>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/ctrl/GUI.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Model.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Tight.java</file>
         </group>
     </open-files>
 </project-private>
